change apiVersion to bootkube-ut2

--- a/modules/bootkube/resources/tnc-config.yaml
+++ b/modules/bootkube/resources/tnc-config.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: bootkube-ut2
 kind: TectonicNodeControllerConfig
 HTTPProxy: "${http_proxy}"
 HTTPSProxy: "${https_proxy}"
