cli: Adjust fixtures to match new camelCase styling

--- a/installer/pkg/config-generator/fixtures/test.yaml
+++ b/installer/pkg/config-generator/fixtures/test.yaml
@@ -1,6 +1,6 @@
-Clusters:
-  - Name: test
-    Platform: AWS
-    BaseDomain: cluster.com
-    Etcd:
-      Count: 3
+clusters:
+  - name: test
+    platform: AWS
+    baseDomain: cluster.com
+    etcd:
+      count: 3
