--- a/tests/smoke/aws/vars/aws.basic.yaml
+++ b/tests/smoke/aws/vars/aws.basic.yaml
@@ -1,58 +1,42 @@
-Clusters:
-  - Name: aws-basic
-    Platform: AWS
-    Networking:
-      Type: canal
-      MTU: 1480
-      PodCIDR: 10.2.0.0/16
-      ServiceCIDR: 10.3.0.0/16
-    Masters:
-      NodeCount: 2
-      MachineType: foo
-    Workers:
-      NodeCount: 3
-      MachineType: bar
-    Etcd:
-      NodeCount: 3
-      MachineType: baz
-    ExternalTLSMaterials:
-      ValidityPeriod: 26280
-    Tectonic:
-      PullSecretPath: null
-      LicensePath: null
-    DNS:
-      BaseDomain: tectonic-ci.de
-    ContainerLinux:
-      Channel: beta
-      Version: latest
-    Update:
-      Server: foo.bar
-      Channel: stable
-      AppID: 42-42-0
-    Console:
-      # TODO: Make this configurable
-      AdminEmail: null
-      AdminPassword: null
-    AWS:
-      Region: null
-      SSHKey: null
-      VPCCIDRBlock: 10.0.0.0/16
-      External:
-      Etcd:
-        EC2Type: m4.large
-        RootVolume:
-          IOPS: 100
-          Size: 30
-          Type: gp2
-      Master:
-        EC2Type: m4.large
-        RootVolume:
-          IOPS: 100
-          Size: 30
-          Type: gp2
-      Worker:
-        EC2Type: m4.large
-        RootVolume:
-          IOPS: 100
-          Size: 30
-          Type: gp2
+clusters:
+  - aws:
+      etcd:
+        ec2Type: m4.large
+        rootVolume:
+          iops: 100
+          size: 30
+          type: gp2
+      master:
+        ec2Type: m4.large
+        rootVolume:
+          iops: 100
+          size: 30
+          type: gp2
+      # region:
+      # sshKey:
+      vpcCIDRBlock: 10.0.0.0/16
+      worker:
+        ec2Type: m4.large
+        rootVolume:
+          iops: 100
+          size: 30
+          type: gp2
+    baseDomain: tectonic-ci.de
+    containerLinux:
+      channel: beta
+      version: latest
+    etcd:
+      count: 3
+    # licensePath:
+    master:
+      count: 2
+    name: aws-basic
+    networking:
+      mtu: 1480
+      podCIDR: 10.2.0.0/16
+      serviceCIDR: 10.3.0.0/16
+      type: canal
+    # pullSecretPath:
+    tlsValidityPeriod: 26280
+    worker:
+      count: 3
