installer: revert change that broke bindata

--- a/installer/assets/BUILD.bazel
+++ b/installer/assets/BUILD.bazel
@@ -1,3 +1,4 @@
+# gazelle:ignore
 package(default_visibility = ["//visibility:public"])
 
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
@@ -5,8 +6,8 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
+        ":bindata",
         "assets.go",
-        "bindata.go",
         "doc.go",
     ],
     importpath = "github.com/coreos/tectonic-installer/installer/assets",
