--- a/tests/smoke/aws/vars/aws.basic.yaml
+++ b/tests/smoke/aws/vars/aws.basic.yaml
@@ -36,6 +36,7 @@ clusters:
       podCIDR: 10.2.0.0/16
       serviceCIDR: 10.3.0.0/16
       type: canal
+    platform: AWS
     # pullSecretPath:
     tlsValidityPeriod: 26280
     worker:
