--- a/tests/smoke/aws/vars/aws.basic.yaml
+++ b/tests/smoke/aws/vars/aws.basic.yaml
@@ -1,5 +1,8 @@
 clusters:
-  - aws:
+  - admin:
+      email: null
+      password: null
+    aws:
       etcd:
         ec2Type: m4.large
         rootVolume:
@@ -12,8 +15,8 @@ clusters:
           iops: 100
           size: 30
           type: gp2
-      # region:
-      # sshKey:
+      region: null
+      sshKey: null
       vpcCIDRBlock: 10.0.0.0/16
       worker:
         ec2Type: m4.large
@@ -27,7 +30,7 @@ clusters:
       version: latest
     etcd:
       count: 3
-    # licensePath:
+    licensePath:
     master:
       count: 2
     name: aws-basic
@@ -37,7 +40,7 @@ clusters:
       serviceCIDR: 10.3.0.0/16
       type: canal
     platform: AWS
-    # pullSecretPath:
+    pullSecretPath:
     tlsValidityPeriod: 26280
     worker:
       count: 3
