--- a/installer/pkg/config/BUILD.bazel
+++ b/installer/pkg/config/BUILD.bazel
@@ -9,6 +9,8 @@ go_test(
 go_library(
     name = "go_default_library",
     srcs = [
+        "cluster.go",
+        "config.go",
         "parser.go",
         "types.go",
         "validate.go",
