--- a/installer/pkg/config/azure/BUILD.bazel
+++ b/installer/pkg/config/azure/BUILD.bazel
@@ -3,8 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
-        "config.go",
-        "types.go",
+        "azure.go",
     ],
     importpath = "github.com/coreos/tectonic-installer/installer/pkg/config/azure",
     visibility = ["//visibility:public"],
