--- a/installer/pkg/config/govcloud/master/BUILD.bazel
+++ b/installer/pkg/config/govcloud/master/BUILD.bazel
@@ -3,8 +3,8 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
-        "metal.go",
+        "master.go",
     ],
-    importpath = "github.com/coreos/tectonic-installer/installer/pkg/config/metal",
+    importpath = "github.com/coreos/tectonic-installer/installer/pkg/config/govcloud/master",
     visibility = ["//visibility:public"],
 )
