--- a/modules/bootkube-ut2/resources/manifests/kube-controller-manager-secret.yaml
+++ b/modules/bootkube-ut2/resources/manifests/kube-controller-manager-secret.yaml
@@ -6,6 +6,5 @@ metadata:
 type: Opaque
 data:
   service-account.key: ${serviceaccount_key}
-  root-ca.crt: ${root_ca_cert}
-  kube-ca.crt: ${kube_ca_cert}
-  kube-ca.key: ${kube_ca_key}
+  ca.crt: ${kube_ca_cert}
+  ca.key: ${kube_ca_key}
