--- a/tests/smoke/aws/vars/aws-basic.yaml
+++ b/tests/smoke/aws/vars/aws-basic.yaml
@@ -28,8 +28,10 @@ clusters:
       - master
   name: aws-basic
   networking:
-    serviceCIDR: 10.3.0.0/16
+    mtu: 1480
     podCIDR: 10.2.0.0/16
+    serviceCIDR: 10.3.0.0/16
+    type: canal
   nodePools:
   - count: 3
     name: etcd
