--- a/installer/cmd/tectonic/BUILD.bazel
+++ b/installer/cmd/tectonic/BUILD.bazel
@@ -49,3 +49,11 @@ go_binary(
     pure = "on",
     visibility = ["//visibility:public"],
 )
+
+filegroup(
+    name = "go_files",
+    visibility = ["//visibility:public"],
+    srcs = glob([
+        "*.go",
+    ]),
+)
