--- a/installer/pkg/config-generator/BUILD.bazel
+++ b/installer/pkg/config-generator/BUILD.bazel
@@ -30,3 +30,11 @@ go_test(
     embed = [":go_default_library"],
     deps = ["//installer/pkg/config:go_default_library"],
 )
+
+filegroup(
+    name = "go_files",
+    visibility = ["//visibility:public"],
+    srcs = glob([
+        "*.go",
+    ]),
+)
