--- a/installer/pkg/config/BUILD.bazel
+++ b/installer/pkg/config/BUILD.bazel
@@ -29,3 +29,11 @@ go_library(
         "//installer/vendor/gopkg.in/yaml.v2:go_default_library",
     ],
 )
+
+filegroup(
+    name = "go_files",
+    visibility = ["//visibility:public"],
+    srcs = glob([
+        "*.go",
+    ]),
+)
