--- a/installer/pkg/validate/BUILD.bazel
+++ b/installer/pkg/validate/BUILD.bazel
@@ -12,3 +12,11 @@ go_library(
     importpath = "github.com/coreos/tectonic-installer/installer/pkg/validate",
     visibility = ["//visibility:public"],
 )
+
+filegroup(
+    name = "go_files",
+    visibility = ["//visibility:public"],
+    srcs = glob([
+        "*.go",
+    ]),
+)
