--- a/images/tectonic-installer/Dockerfile
+++ b/images/tectonic-installer/Dockerfile
@@ -4,4 +4,4 @@ FROM alpine:3.7
 # https://github.com/moby/moby/issues/1676) Make sure to first copy the tarball
 # from bazel-bin/tectonic.tar.gz to the docker build context folder of your
 # choice (e.g. the root of the repository).
-ADD tectonic.tar.gz /
+ADD tectonic-dev.tar.gz /
