--- a/images/kubernetes-e2e/Dockerfile
+++ b/images/kubernetes-e2e/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update && apt-get install -y rsync && rm -rf /var/lib/apt/lists/*
 
 # Git Repository Configuration
 ARG E2E_REPO=https://github.com/coreos/kubernetes
-ARG E2E_REF=v1.8.4+coreos.0
+ARG E2E_REF=v1.9.1+coreos.0
 
 # clone Kubernetes repository
 RUN mkdir -p ${GOPATH}/src/k8s.io && \
@@ -21,5 +21,5 @@ RUN GOLDFLAGS="--s -w" make all WHAT="cmd/kubectl vendor/github.com/onsi/ginkgo/
 
 # testing defaults
 ENV KUBE_OS_DISTRIBUTION=coreos KUBERNETES_CONFORMANCE_TEST=Y HOME=/go/src/k8s.io/kubernetes SKEW=false FOCUS=Conformance
-CMD KUBECONFIG=/kubeconfig go run hack/e2e.go -- -v --test --check-version-skew=${SKEW} --test_args="--ginkgo.focus=\[${FOCUS}\] ${TEST_ARGS}"
+CMD KUBECONFIG=/kubeconfig go run hack/e2e.go -- -v 1 --test --check-version-skew=${SKEW} --test_args="--ginkgo.focus=\[${FOCUS}\] ${TEST_ARGS}"
 
