--- a/installer/pkg/config-generator/BUILD.bazel
+++ b/installer/pkg/config-generator/BUILD.bazel
@@ -11,14 +11,17 @@ go_library(
     deps = [
         "//installer/pkg/config:go_default_library",
         "//installer/vendor/github.com/apparentlymart/go-cidr/cidr:go_default_library",
-        "//installer/vendor/github.com/coreos/ignition/config/v2_0:go_default_library",
-        "//installer/vendor/github.com/coreos/ignition/config/v2_0/types:go_default_library",
+        "//installer/vendor/github.com/coreos/container-linux-config-transpiler/config:go_default_library",
+        "//installer/vendor/github.com/coreos/container-linux-config-transpiler/config/types:go_default_library",
+        "//installer/vendor/github.com/coreos/ignition/config/v2_1:go_default_library",
+        "//installer/vendor/github.com/coreos/ignition/config/v2_1/types:go_default_library",
         "//installer/vendor/github.com/coreos/tectonic-config/config/kube-addon:go_default_library",
         "//installer/vendor/github.com/coreos/tectonic-config/config/kube-core:go_default_library",
         "//installer/vendor/github.com/coreos/tectonic-config/config/tectonic-network:go_default_library",
         "//installer/vendor/github.com/coreos/tectonic-config/config/tectonic-utility:go_default_library",
         "//installer/vendor/github.com/ghodss/yaml:go_default_library",
         "//installer/vendor/golang.org/x/crypto/bcrypt:go_default_library",
+        "//installer/vendor/gopkg.in/yaml.v2:go_default_library",
         "//installer/vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
     ],
 )
@@ -29,4 +32,12 @@ go_test(
     data = glob(["fixtures/**"]),
     embed = [":go_default_library"],
     deps = ["//installer/pkg/config:go_default_library"],
+)
+
+filegroup(
+    name = "templates",
+    srcs = glob([
+        "templates/**",
+    ]),
+    visibility = ["//visibility:public"],
 )
