--- a/modules/bootkube/resources/manifests/kube-dns.yaml
+++ b/modules/bootkube/resources/manifests/kube-dns.yaml
@@ -15,11 +15,9 @@ spec:
   - name: dns
     port: 53
     protocol: UDP
-    targetPort: 53
   - name: dns-tcp
     port: 53
     protocol: TCP
-    targetPort: 53
 ---
 apiVersion: apps/v1beta2
 kind: Deployment
@@ -117,6 +115,7 @@ spec:
         - --
         - -k
         - --cache-size=1000
+        - --no-negcache
         - --log-facility=-
         - --server=/cluster.local/127.0.0.1#10053
         - --server=/in-addr.arpa/127.0.0.1#10053
@@ -150,8 +149,8 @@ spec:
         args:
         - --v=2
         - --logtostderr
-        - --probe=kubedns,127.0.0.1:10053,kubernetes.default.svc.cluster.local,5,A
-        - --probe=dnsmasq,127.0.0.1:53,kubernetes.default.svc.cluster.local,5,A
+        - --probe=kubedns,127.0.0.1:10053,kubernetes.default.svc.cluster.local,5,SRV
+        - --probe=dnsmasq,127.0.0.1:53,kubernetes.default.svc.cluster.local,5,SRV
         ports:
         - containerPort: 10054
           name: metrics
