--- a/modules/ignition/resources/services/k8s-node-bootstrap.service
+++ b/modules/ignition/resources/services/k8s-node-bootstrap.service
@@ -12,7 +12,6 @@ Restart=on-failure
 RestartSec=10
 TimeoutStartSec=1h
 ExecStartPre=/usr/bin/mkdir -p /etc/kubernetes
-${kubeconfig_fetch_cmd}
 ExecStartPre=/usr/bin/docker run --rm \
             --env http_proxy \
             --env HTTP_PROXY \
@@ -32,7 +31,7 @@ ExecStartPre=/usr/bin/docker run --rm \
             -v /etc/coreos:/etc/coreos:ro \
             -v /etc/torcx:/etc/torcx \
             -v /etc/kubernetes:/etc/kubernetes \
-            ${tectonic_torcx_image_url}:${tectonic_torcx_image_tag} \
+            ${tectonic_torcx_image} \
             /tectonic-torcx-bootstrap \
             --upgrade-os=${bootstrap_upgrade_cl} \
             --torcx-manifest-url="${torcx_store_url}" \
