--- a/installer/pkg/workflow/BUILD.bazel
+++ b/installer/pkg/workflow/BUILD.bazel
@@ -4,8 +4,7 @@ go_test(
     name = "go_default_test",
     size = "small",
     srcs = [
-        "init_test.go",
-        "workflow_test.go",
+        "cluster_test.go",
     ],
     data = glob(["fixtures/**"]),
     embed = [":go_default_library"],
@@ -16,13 +15,10 @@ go_library(
     name = "go_default_library",
     srcs = [
         "convert.go",
-        "destroy.go",
         "executor.go",
-        "init.go",
-        "install.go",
         "terraform.go",
         "utils.go",
-        "workflow.go",
+        "cluster.go",
     ],
     importpath = "github.com/coreos/tectonic-installer/installer/pkg/workflow",
     visibility = ["//visibility:public"],
