--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ language: bash
 services:
   - docker
 env:
-  - BAZEL_IMG="quay.io/coreos/tectonic-builder:bazel-v0.3"
+  global:
+    - BAZEL_IMG="quay.io/coreos/tectonic-builder:bazel-v0.3"
 branches:
   only:
     - master
@@ -16,12 +17,12 @@ jobs:
       # YAML lint
     - script: >
         docker run -t -v $(pwd):/workdir 
-        giantswarm/yamllint --config-data 
+        quay.io/coreos/yamllint --config-data 
         '{extends: default, rules: {line-length: {level: warning, max: 120}}}' 
         ./examples/ ./installer/
       # Go lint
-      #- script: "docker run -v $PWD:$PWD -w $PWD appleboy/golang-testing golint -set_exit_status installer/..."
-    - script: "docker run -v $PWD:$PWD -w $PWD appleboy/golang-testing golint installer/..."
+      #- script: "docker run -v $PWD:$PWD -w $PWD quay.io/coreos/golang-testing golint -set_exit_status installer/..."
+    - script: "docker run -v $PWD:$PWD -w $PWD quay.io/coreos/golang-testing golint installer/..."
       # Terraform tests
     - script: "chmod 0777 $PWD && docker run -v $PWD:$PWD:rw -w $PWD $BAZEL_IMG bazel test terraform_fmt --test_output=all"
       # Installer unit tests
