--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ jobs:
       # shellcheck
     - script: >
         docker run -v $(pwd):/workdir:ro
-        --entrypoint sh koalaman/shellcheck-alpine:v0.4.7
+        --entrypoint sh quay.io/coreos/shellcheck-alpine:v0.5.0
         -c 'for file in $(find /workdir/ -type f -name "*.sh"); do
         if ! shellcheck --format=gcc $file; then export FAILED=true; fi; done;
         if [ "$FAILED" != "" ]; then exit 1; fi'
