WIP: Refactor init command to initialize and add import command which reflects previous init command

--- a/installer/pkg/workflow/BUILD.bazel
+++ b/installer/pkg/workflow/BUILD.bazel
@@ -6,8 +6,10 @@ go_library(
         "convert.go",
         "destroy.go",
         "executor.go",
+        "import.go",
         "init.go",
         "install.go",
+        "template.go",
         "terraform.go",
         "utils.go",
         "workflow.go",
