--- a/installer/pkg/config-generator/BUILD.bazel
+++ b/installer/pkg/config-generator/BUILD.bazel
@@ -12,7 +12,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//installer/pkg/config:go_default_library",
-        "//installer/pkg/tls:go_default_library",
+        "//installer/pkg/config-generator/tls:go_default_library",
         "//installer/pkg/validate:go_default_library",
         "//vendor/github.com/apparentlymart/go-cidr/cidr:go_default_library",
         "//vendor/github.com/coreos/ignition/config/v2_2:go_default_library",
