force nikogiri to be installed in correct version

--- a/tests/rspec/Gemfile
+++ b/tests/rspec/Gemfile
@@ -9,6 +9,7 @@ gem 'chromedriver-helper', '~>1.1.0'
 gem 'faker', '~>1.8.4'
 gem 'headless', '~>2.3.1'
 gem 'net-ssh', '~>4.2.0'
+gem 'nokogiri', '~>1.8.4'
 gem 'rspec', '~>3.0'
 gem 'rspec-retry', '~>0.5.5'
 gem 'rspec_tap'
