operator: Add toleration to the operators for everything
Customers will add their own taints to nodes, which can block
our operators, so we need to add the omnipotent toleration here
to make our operators schedulable.

--- a/modules/tectonic/resources/manifests/updater/operators/tectonic-alm-operator.yaml
+++ b/modules/tectonic/resources/manifests/updater/operators/tectonic-alm-operator.yaml
@@ -22,6 +22,8 @@ spec:
       labels:
         k8s-app: tectonic-alm-operator
     spec:
+      tolerations:
+      - operator: "Exists"
       imagePullSecrets:
         - name: coreos-pull-secret
       containers:
