--- a/modules/tectonic/resources/manifests/updater/operators/kube-version-operator.yaml
+++ b/modules/tectonic/resources/manifests/updater/operators/kube-version-operator.yaml
@@ -17,6 +17,8 @@ spec:
         k8s-app: kube-version-operator
         tectonic-app-version-name: kubernetes
     spec:
+      tolerations:
+      - operator: "Exists"
       containers:
       - name: kube-version-operator
         image: ${kube_version_operator_image}
