--- a/modules/tectonic/resources/manifests/updater/operators/tectonic-prometheus-operator.yaml
+++ b/modules/tectonic/resources/manifests/updater/operators/tectonic-prometheus-operator.yaml
@@ -17,6 +17,8 @@ spec:
         k8s-app: tectonic-prometheus-operator
         tectonic-app-version-name: tectonic-monitoring
     spec:
+      tolerations:
+      - operator: "Exists"
       containers:
       - image: ${tectonic_prometheus_operator_image}
         name: tectonic-prometheus-operator
