--- a/modules/ignition/resources/kubernetes/runtime-mappings.yaml
+++ b/modules/ignition/resources/kubernetes/runtime-mappings.yaml
@@ -1,13 +1,7 @@
 kind: VersionManifestV1
 versions:
   k8s:
-    1.6:
-        docker: [ "1.12"]
-    1.7:
-        docker: [ "1.12" ]
-    1.8:
-        docker: [ "17.03", "1.12"]
-    1.9:
-        docker: [ "17.03", "1.12"]
     1.10:
         docker: [ "17.03", "1.12"]
+    1.11:
+        docker: [ "18.03", "17.03", "1.12"]
